# darknet

./: .gitignore  CMakeLists.txt  Makefile
cfg/: yolov3.cfg
examples/: detector.c
include/: darknet.h
src/: box.c  network.c  parser.c  yolo_layer.c
